Bug 404358 - Cancelled installation of a Snap package (VSCode) made Discovery lock up with a 0% task in the tube.
Summary: Cancelled installation of a Snap package (VSCode) made Discovery lock up with...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Snap Backend (other bugs)
Version First Reported In: 5.14.5
Platform: Ubuntu Linux
: HI major
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
: 403463 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-02-14 16:57 UTC by Ivar Erikson
Modified: 2020-02-21 19:45 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.1
Sentry Crash Report:


Attachments
tasks 0% unable to close (290.32 KB, image/png)
2019-02-14 16:57 UTC, Ivar Erikson
Details
queue which won't clear after cancellation (285.24 KB, image/png)
2019-02-14 16:57 UTC, Ivar Erikson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivar Erikson 2019-02-14 16:57:16 UTC
Created attachment 118077 [details]
tasks 0% unable to close

SUMMARY

Cancelled installation of a Snap package (VSCode) made Discovery lock up with a 0% task in the tube.

I got the following prompt, after pressing Install and submitting my password for installing:

"This snap application needs security confinement measures disabled."

I clicked Cancel on the dialogue. This made Discover lock at a "Task (0%)" and give me the error "Could not close the application, there are tasks that need to be done".

Each time I click on "Task (0%)" (bottom right corner), I get the narrow overlay with a queue. Here I see two instances of Visual Code (two because I tried again for this report, had only one previously)


STEPS TO REPRODUCE
1. Select install on a Snap package (in my case VSCode)
2. PW when prompted with normal admin privileges
3. Cancel when asked to allow snap to disable security confinement
4. Observe the frozen task in Tasks


OBSERVED RESULT
Freezing, unable to close Discover due to the Task stuck in the queue.


EXPECTED RESULT
The install should terminate, clearing the Tasks queue.


SOFTWARE/OS VERSIONS
Operating System: Kubuntu 18.10
KDE Plasma Version: 5.14.5
Qt Version: 5.11.1
KDE Frameworks Version: 5.52.0
Kernel Version: 4.18.0-15-generic
OS Type: 64-bit
Comment 1 Ivar Erikson 2019-02-14 16:57:58 UTC
Created attachment 118078 [details]
queue which won't clear after cancellation
Comment 2 Patrick Silva 2019-02-28 10:15:20 UTC
*** Bug 403463 has been marked as a duplicate of this bug. ***
Comment 3 Patrick Silva 2019-05-10 22:56:59 UTC
Still reproducible on neon dev unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.15.80
KDE Frameworks Version: 5.58.0
Qt Version: 5.12.0
Comment 4 Aleix Pol 2019-10-28 17:54:05 UTC
Git commit 31c9dac67093e5c7e46c7af124105d4ebfeec064 by Aleix Pol.
Committed on 28/10/2019 at 17:46.
Pushed by apol into branch 'Plasma/5.17'.

snap: fix cancelling

M  +2    -2    libdiscover/backends/SnapBackend/SnapTransaction.cpp

https://commits.kde.org/discover/31c9dac67093e5c7e46c7af124105d4ebfeec064
Comment 5 Patrick Silva 2019-11-21 11:40:39 UTC
This issue is still reproducible on Neon testing and Neon unstable editions.