snap: fix cancelling

BUG: 404358